tests/expected/recovery/statements/008_throw_with_malformed_expr.txt
{
  "type": "Program",
  "start": 0,
  "end": 104,
  "sourceType": "script",
  "hashbang": null,
  "body": [
    {
      "type": "ThrowStatement",
      "start": 57,
      "end": 73,
      "argument": {
        "type": "NewExpression",
        "start": 63,
        "end": 73,
        "callee": {
          "type": "Identifier",
          "start": 67,
          "end": 72,
          "name": "Error"        },
        "arguments": [
        ]      }    },
    {
      "type": "VariableDeclaration",
      "start": 74,
      "end": 103,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 80,
          "end": 102,
          "id": {
            "type": "Identifier",
            "start": 80,
            "end": 98,
            "name": "anchor_after_error"          },
          "init": {
            "type": "Literal",
            "start": 101,
            "end": 102,
            "value": 1,
            "raw": "1"          }        }
      ]    }
  ],
  "comments": [
    {
      "type": "Line",
      "start": 0,
      "end": 56,
      "value": " Throw statement with a malformed argument expression."
    }
  ],
  "errors": [
    {
      "code": "K2002",
      "severity": "error",
      "message": "Expected ')', got 'const'",
      "line": 3,
      "column": 1,
      "offset": 74
    }
  ]
}
error[K2002]: Expected ')', got 'const'
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/statements/008_throw_with_malformed_expr.js:3:1
   |
 3 | const anchor_after_error = 1;
   | ^^^^^
  = note: see TS1005

--- Statistics ---
Arena: used=37664B reserved=16777216B ratio=0%
Parse errors: 1
